[gd_scene load_steps=42 format=3 uid="uid://b5tpsl64nk1gq"]

[ext_resource type="Script" path="res://addons/godot_landscaper/scripts/ui_control.gd" id="1_ihtkw"]
[ext_resource type="PackedScene" uid="uid://b5cbncjt0oya0" path="res://addons/godot_landscaper/scenes/ui_custom_tabs.tscn" id="2_vth1l"]
[ext_resource type="Texture2D" uid="uid://b0vixk6g6mb0o" path="res://addons/godot_landscaper/textures/icons.svg" id="3_36jfa"]
[ext_resource type="PackedScene" uid="uid://7l6ujrx1sram" path="res://addons/godot_landscaper/scenes/ui_custom_slider.tscn" id="4_d0wrk"]
[ext_resource type="Script" path="res://addons/godot_landscaper/scripts/brush_terrain_builder.gd" id="5_7mk5v"]
[ext_resource type="PackedScene" uid="uid://bdfmi4jds2j42" path="res://addons/godot_landscaper/scenes/ui_custom_toggle_content.tscn" id="6_cwr50"]
[ext_resource type="Script" path="res://addons/godot_landscaper/scripts/brush_terrain_color.gd" id="7_8tgwa"]
[ext_resource type="PackedScene" uid="uid://dm7ycgrpmdj5t" path="res://addons/godot_landscaper/scenes/ui_custom_color_picker_ui.tscn" id="8_hfv6j"]
[ext_resource type="Script" path="res://addons/godot_landscaper/scripts/brush_terrain_height.gd" id="9_a2wk7"]
[ext_resource type="PackedScene" uid="uid://ldq3svxcclhh" path="res://addons/godot_landscaper/scenes/ui_custom_number_input.tscn" id="10_0grxw"]
[ext_resource type="Script" path="res://addons/godot_landscaper/scripts/brush_grass_color.gd" id="11_fu302"]
[ext_resource type="PackedScene" uid="uid://c4i53bn8ovmsg" path="res://addons/godot_landscaper/scenes/ui_custom_double_button.tscn" id="11_h4pcf"]
[ext_resource type="Script" path="res://addons/godot_landscaper/scripts/brush_grass_spawn.gd" id="12_osa4l"]
[ext_resource type="PackedScene" uid="uid://cf4qb7d6noqq1" path="res://addons/godot_landscaper/scenes/ui_custom_vector2_input.tscn" id="13_ldph7"]
[ext_resource type="PackedScene" uid="uid://dpqsi2h5lwv4j" path="res://addons/godot_landscaper/scenes/ui_custom_dropbox.tscn" id="15_veelq"]
[ext_resource type="Texture2D" uid="uid://b6e4qfd858agt" path="res://addons/godot_landscaper/textures/icons_medium.svg" id="15_xivst"]
[ext_resource type="Script" path="res://addons/godot_landscaper/scripts/brush_instancer.gd" id="17_6uq1r"]
[ext_resource type="Script" path="res://addons/godot_landscaper/scripts/assets_manager.gd" id="17_xgvx6"]
[ext_resource type="PackedScene" uid="uid://b6dp6o7trv5ru" path="res://addons/godot_landscaper/scenes/ui_custom_file_input.tscn" id="18_n0bpv"]
[ext_resource type="PackedScene" uid="uid://dop1ullwx5cmr" path="res://addons/godot_landscaper/scenes/ui_custom_instance.tscn" id="18_otugd"]
[ext_resource type="Texture2D" uid="uid://bi70eyrxkuhfy" path="res://addons/godot_landscaper/textures/icons_small.svg" id="19_jftko"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fg34q"]
bg_color = Color(0.211765, 0.239216, 0.290196, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fixda"]
bg_color = Color(0.145098, 0.168627, 0.203922, 1)

[sub_resource type="ButtonGroup" id="ButtonGroup_to5kf"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ksya5"]
atlas = ExtResource("3_36jfa")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ieiv0"]
atlas = ExtResource("3_36jfa")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rrt18"]
atlas = ExtResource("3_36jfa")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2yokp"]
atlas = ExtResource("3_36jfa")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_t3o2m"]
atlas = ExtResource("3_36jfa")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_h4r7w"]
atlas = ExtResource("3_36jfa")
region = Rect2(320, 0, 64, 64)

[sub_resource type="ButtonGroup" id="ButtonGroup_lfcy4"]

[sub_resource type="AtlasTexture" id="AtlasTexture_epkdy"]
atlas = ExtResource("15_xivst")
region = Rect2(0, 0, 40, 40)

[sub_resource type="ButtonGroup" id="ButtonGroup_aqhh1"]

[sub_resource type="AtlasTexture" id="AtlasTexture_3lbna"]
atlas = ExtResource("15_xivst")
region = Rect2(40, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_p30kj"]
atlas = ExtResource("15_xivst")
region = Rect2(80, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_xpq74"]
atlas = ExtResource("15_xivst")
region = Rect2(120, 0, 40, 40)

[sub_resource type="ButtonGroup" id="ButtonGroup_ycg2l"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r5508"]
bg_color = Color(0.211765, 0.239216, 0.290196, 0.756863)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yv4dm"]
bg_color = Color(0.211765, 0.239216, 0.290196, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_0gaee"]
atlas = ExtResource("19_jftko")
region = Rect2(22, 0, 22, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_pbtfv"]
atlas = ExtResource("19_jftko")
region = Rect2(44, 0, 22, 22)

[node name="Landscaper" type="Control"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ihtkw")

[node name="Dock" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -56.0
grow_horizontal = 2
grow_vertical = 2

[node name="Tabs" parent="Dock" instance=ExtResource("2_vth1l")]
layout_mode = 2
size_flags_vertical = 0
property_name = "Select Brush"

[node name="Label" parent="Dock/Tabs/PanelContainer/VBoxContainer" index="0"]
visible = false
text = "Select Brush"

[node name="TerrainBuilder" type="Button" parent="Dock/Tabs/PanelContainer/VBoxContainer/Tabs" index="0"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_fg34q")
theme_override_styles/pressed = SubResource("StyleBoxFlat_fixda")
toggle_mode = true
button_pressed = true
button_group = SubResource("ButtonGroup_to5kf")
icon = SubResource("AtlasTexture_ksya5")

[node name="TerrainColor" type="Button" parent="Dock/Tabs/PanelContainer/VBoxContainer/Tabs" index="1"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_fg34q")
theme_override_styles/pressed = SubResource("StyleBoxFlat_fixda")
toggle_mode = true
button_group = SubResource("ButtonGroup_to5kf")
icon = SubResource("AtlasTexture_ieiv0")

[node name="TerrainHeight" type="Button" parent="Dock/Tabs/PanelContainer/VBoxContainer/Tabs" index="2"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_fg34q")
theme_override_styles/pressed = SubResource("StyleBoxFlat_fixda")
toggle_mode = true
button_group = SubResource("ButtonGroup_to5kf")
icon = SubResource("AtlasTexture_rrt18")

[node name="GrassColor" type="Button" parent="Dock/Tabs/PanelContainer/VBoxContainer/Tabs" index="3"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_fg34q")
theme_override_styles/pressed = SubResource("StyleBoxFlat_fixda")
toggle_mode = true
button_group = SubResource("ButtonGroup_to5kf")
icon = SubResource("AtlasTexture_2yokp")

[node name="GrassSpawn" type="Button" parent="Dock/Tabs/PanelContainer/VBoxContainer/Tabs" index="4"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_fg34q")
theme_override_styles/pressed = SubResource("StyleBoxFlat_fixda")
toggle_mode = true
button_group = SubResource("ButtonGroup_to5kf")
icon = SubResource("AtlasTexture_t3o2m")

[node name="Instancer" type="Button" parent="Dock/Tabs/PanelContainer/VBoxContainer/Tabs" index="5"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_fg34q")
theme_override_styles/pressed = SubResource("StyleBoxFlat_fixda")
toggle_mode = true
button_group = SubResource("ButtonGroup_to5kf")
icon = SubResource("AtlasTexture_h4r7w")

[node name="Description" type="Label" parent="Dock"]
layout_mode = 2
text = "Left click to build, right click to erase terrain, and mouse wheel + Shift to change brush size."
autowrap_mode = 3

[node name="BrushSize" parent="Dock" instance=ExtResource("4_d0wrk")]
layout_mode = 2
_min_value = 0.001
_max_value = 0.4
property_name = "Brush Size"

[node name="Body" type="Panel" parent="Dock"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_fixda")

[node name="ScrollContainer" type="ScrollContainer" parent="Dock/Body"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Dock/Body/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="TerrainBuilder" type="VBoxContainer" parent="Dock/Body/ScrollContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10
script = ExtResource("5_7mk5v")

[node name="ToggleContent" parent="Dock/Body/ScrollContainer/MarginContainer/TerrainBuilder" instance=ExtResource("6_cwr50")]
layout_mode = 2
tooltip_text = "This texture is NOT saved externally. 
Format is LA8 for 'get_used_rect()' functionality"
property_name_pressed = "Hide Texture"
property_name = "Show Texture"

[node name="CustomNumberInput" parent="Dock/Body/ScrollContainer/MarginContainer/TerrainBuilder" instance=ExtResource("10_0grxw")]
layout_mode = 2
tooltip_text = "The even scale of the building area. 
This area will always follow your 
terrain wherever you move it"
suffix = "meters squared"
step = 2.0
property_name = "Canvas Size"

[node name="TerrainColor" type="VBoxContainer" parent="Dock/Body/ScrollContainer/MarginContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 10
script = ExtResource("7_8tgwa")

[node name="ToggleContent" parent="Dock/Body/ScrollContainer/MarginContainer/TerrainColor" instance=ExtResource("6_cwr50")]
layout_mode = 2
tooltip_text = "This texture IS saved externally. 
Format is RGBA8"
property_name_pressed = "Hide Texture"
property_name = "Show Texture"

[node name="ColorPicker" parent="Dock/Body/ScrollContainer/MarginContainer/TerrainColor" instance=ExtResource("8_hfv6j")]
layout_mode = 2
tooltip_text = "Brush color to paint the terrain and 
the roots of the grass as well"
_enable_button = false

[node name="Resolution" parent="Dock/Body/ScrollContainer/MarginContainer/TerrainColor" instance=ExtResource("10_0grxw")]
layout_mode = 2
tooltip_text = "Texture size is: resolution*terrain_size"
suffix = "pixels per meter"
property_name = "Resolution"

[node name="TerrainHeight" type="VBoxContainer" parent="Dock/Body/ScrollContainer/MarginContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 10
script = ExtResource("9_a2wk7")

[node name="ToggleContent" parent="Dock/Body/ScrollContainer/MarginContainer/TerrainHeight" instance=ExtResource("6_cwr50")]
layout_mode = 2
tooltip_text = "This texture is NOT saved externally.
 Format is LA8 for alpha smoothing"
property_name_pressed = "Hide Texture"
property_name = "Show Texture"

[node name="Strenght" parent="Dock/Body/ScrollContainer/MarginContainer/TerrainHeight" instance=ExtResource("4_d0wrk")]
layout_mode = 2
tooltip_text = "How quickly you want the terrain to 
create mountains ot valleys when you 
paint over the terrain"
_min_value = 0.001
_max_value = 0.1
property_name = "Strength"

[node name="MaxHeight" parent="Dock/Body/ScrollContainer/MarginContainer/TerrainHeight" instance=ExtResource("10_0grxw")]
layout_mode = 2
tooltip_text = "How the grayscale of this texture is 
interpreted in the real world"
suffix = "m"
step = 0.1
property_name = "Max Height"

[node name="ApplyAll" parent="Dock/Body/ScrollContainer/MarginContainer/TerrainHeight" instance=ExtResource("11_h4pcf")]
layout_mode = 2
tooltip_text = "Applies a soft black/white mask over 
the whole texture so this can be 
destructive"

[node name="GrassColor" type="VBoxContainer" parent="Dock/Body/ScrollContainer/MarginContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 10
script = ExtResource("11_fu302")

[node name="ToggleContent" parent="Dock/Body/ScrollContainer/MarginContainer/GrassColor" instance=ExtResource("6_cwr50")]
layout_mode = 2
tooltip_text = "This texture IS saved externally. 
Format is RGBA8"
property_name_pressed = "Hide Texture"
property_name = "Show Texture"

[node name="ColorPicker" parent="Dock/Body/ScrollContainer/MarginContainer/GrassColor" instance=ExtResource("8_hfv6j")]
layout_mode = 2
tooltip_text = "Brush color to paint the top of the 
grass, the bottom will take the color of 
the terrain"
_enable_button = false

[node name="GrassSpawner" type="VBoxContainer" parent="Dock/Body/ScrollContainer/MarginContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 10
script = ExtResource("12_osa4l")

[node name="ToggleContent" parent="Dock/Body/ScrollContainer/MarginContainer/GrassSpawner" instance=ExtResource("6_cwr50")]
layout_mode = 2
tooltip_text = "This texture is NOT saved externally. 
Format is L8"
property_name_pressed = "Hide Texture"
property_name = "Show Texture"

[node name="Density" parent="Dock/Body/ScrollContainer/MarginContainer/GrassSpawner" instance=ExtResource("10_0grxw")]
layout_mode = 2
tooltip_text = "How many grass instances are inside 
the area you have painted with this 
brush"
suffix = "grass per meter"
property_name = "Density"

[node name="Quality" parent="Dock/Body/ScrollContainer/MarginContainer/GrassSpawner" instance=ExtResource("4_d0wrk")]
layout_mode = 2
tooltip_text = "Subdivisions for each blade of grass. 
This affects its sway animation and 
gradient color smoothness (because is 
vertex colored)"
_max_value = 10.0
property_name = "Quality"

[node name="Gradient" parent="Dock/Body/ScrollContainer/MarginContainer/GrassSpawner" instance=ExtResource("4_d0wrk")]
layout_mode = 2
tooltip_text = "The color mix from the grass roots to 
the top as seen from the front.:
BLACK=terrain_color 
WHITE=grass_color"
_max_value = 1.0
property_name = "Gradient value"

[node name="DetailColor" parent="Dock/Body/ScrollContainer/MarginContainer/GrassSpawner" instance=ExtResource("8_hfv6j")]
layout_mode = 2
tooltip_text = "Recolor of the black tint of your grass 
texture. Has no effect if your grass 
doesn't have details to begin with"
_enable_button = true
property_name = "Detail Color"

[node name="Size" parent="Dock/Body/ScrollContainer/MarginContainer/GrassSpawner" instance=ExtResource("13_ldph7")]
layout_mode = 2
tooltip_text = "Size of the average blade of grass in meters"
step = 0.1
property_name = "Size"

[node name="Variants" parent="Dock/Body/ScrollContainer/MarginContainer/GrassSpawner" instance=ExtResource("2_vth1l")]
layout_mode = 2
tooltip_text = "A list of grass textures to use.
Does not create extra materials but 
more than one requires a Forward+ 
renderer."
property_name = "Select Grass:"

[node name="Label" parent="Dock/Body/ScrollContainer/MarginContainer/GrassSpawner/Variants/PanelContainer/VBoxContainer" index="0"]
text = "Select Grass:"

[node name="Variant0" parent="Dock/Body/ScrollContainer/MarginContainer/GrassSpawner/Variants/PanelContainer/VBoxContainer/Tabs" index="0" instance=ExtResource("15_veelq")]
layout_mode = 2
disabled = true
button_group = SubResource("ButtonGroup_lfcy4")
icon = SubResource("AtlasTexture_epkdy")
property_name = "Variant 0"

[node name="Variant1" parent="Dock/Body/ScrollContainer/MarginContainer/GrassSpawner/Variants/PanelContainer/VBoxContainer/Tabs" index="1" instance=ExtResource("15_veelq")]
layout_mode = 2
disabled = true
button_group = SubResource("ButtonGroup_lfcy4")
icon = SubResource("AtlasTexture_epkdy")
property_name = "Variant 1"

[node name="Variant2" parent="Dock/Body/ScrollContainer/MarginContainer/GrassSpawner/Variants/PanelContainer/VBoxContainer/Tabs" index="2" instance=ExtResource("15_veelq")]
layout_mode = 2
disabled = true
button_group = SubResource("ButtonGroup_lfcy4")
icon = SubResource("AtlasTexture_epkdy")
property_name = "Variant 2"

[node name="Variant3" parent="Dock/Body/ScrollContainer/MarginContainer/GrassSpawner/Variants/PanelContainer/VBoxContainer/Tabs" index="3" instance=ExtResource("15_veelq")]
layout_mode = 2
disabled = true
button_group = SubResource("ButtonGroup_lfcy4")
icon = SubResource("AtlasTexture_epkdy")
property_name = "Variant 3"

[node name="Billboard" parent="Dock/Body/ScrollContainer/MarginContainer/GrassSpawner" instance=ExtResource("2_vth1l")]
layout_mode = 2
tooltip_text = "Types of billboarding:
BillboardY: looks at the camera
CrossBillboard: double grass in a 
shape of a cross
Scatter: Random placements"
property_name = "Billboarding"

[node name="Label" parent="Dock/Body/ScrollContainer/MarginContainer/GrassSpawner/Billboard/PanelContainer/VBoxContainer" index="0"]
text = "Billboarding"

[node name="Scatter" type="Button" parent="Dock/Body/ScrollContainer/MarginContainer/GrassSpawner/Billboard/PanelContainer/VBoxContainer/Tabs" index="0"]
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_aqhh1")
text = "Scatter"
icon = SubResource("AtlasTexture_3lbna")

[node name="CrossBillboard" type="Button" parent="Dock/Body/ScrollContainer/MarginContainer/GrassSpawner/Billboard/PanelContainer/VBoxContainer/Tabs" index="1"]
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_aqhh1")
text = "Cross"
icon = SubResource("AtlasTexture_p30kj")

[node name="BillboardY" type="Button" parent="Dock/Body/ScrollContainer/MarginContainer/GrassSpawner/Billboard/PanelContainer/VBoxContainer/Tabs" index="2"]
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_aqhh1")
text = "Y"
icon = SubResource("AtlasTexture_xpq74")

[node name="Instancer" type="VBoxContainer" parent="Dock/Body/ScrollContainer/MarginContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 10
script = ExtResource("17_6uq1r")

[node name="ToggleContent" parent="Dock/Body/ScrollContainer/MarginContainer/Instancer" instance=ExtResource("6_cwr50")]
layout_mode = 2
tooltip_text = "This texture is NOT saved externally. 
Format is L8"
property_name_pressed = "Hide Texture"
property_name = "Show Texture"

[node name="Instances" parent="Dock/Body/ScrollContainer/MarginContainer/Instancer" instance=ExtResource("2_vth1l")]
layout_mode = 2

[node name="Label" parent="Dock/Body/ScrollContainer/MarginContainer/Instancer/Instances/PanelContainer/VBoxContainer" index="0"]
visible = false

[node name="CustomInstance" parent="Dock/Body/ScrollContainer/MarginContainer/Instancer/Instances/PanelContainer/VBoxContainer/Tabs" index="0" instance=ExtResource("18_otugd")]
layout_mode = 2
button_group = SubResource("ButtonGroup_ycg2l")

[node name="CustomInstance1" parent="Dock/Body/ScrollContainer/MarginContainer/Instancer/Instances/PanelContainer/VBoxContainer/Tabs" index="1" instance=ExtResource("18_otugd")]
layout_mode = 2
button_group = SubResource("ButtonGroup_ycg2l")

[node name="CustomInstance2" parent="Dock/Body/ScrollContainer/MarginContainer/Instancer/Instances/PanelContainer/VBoxContainer/Tabs" index="2" instance=ExtResource("18_otugd")]
layout_mode = 2
button_group = SubResource("ButtonGroup_ycg2l")

[node name="CustomInstance3" parent="Dock/Body/ScrollContainer/MarginContainer/Instancer/Instances/PanelContainer/VBoxContainer/Tabs" index="3" instance=ExtResource("18_otugd")]
layout_mode = 2
button_group = SubResource("ButtonGroup_ycg2l")

[node name="CustomInstance4" parent="Dock/Body/ScrollContainer/MarginContainer/Instancer/Instances/PanelContainer/VBoxContainer/Tabs" index="4" instance=ExtResource("18_otugd")]
layout_mode = 2
button_group = SubResource("ButtonGroup_ycg2l")

[node name="CustomInstance5" parent="Dock/Body/ScrollContainer/MarginContainer/Instancer/Instances/PanelContainer/VBoxContainer/Tabs" index="5" instance=ExtResource("18_otugd")]
layout_mode = 2
button_group = SubResource("ButtonGroup_ycg2l")

[node name="CustomInstance6" parent="Dock/Body/ScrollContainer/MarginContainer/Instancer/Instances/PanelContainer/VBoxContainer/Tabs" index="6" instance=ExtResource("18_otugd")]
layout_mode = 2
button_group = SubResource("ButtonGroup_ycg2l")

[node name="CustomInstance7" parent="Dock/Body/ScrollContainer/MarginContainer/Instancer/Instances/PanelContainer/VBoxContainer/Tabs" index="7" instance=ExtResource("18_otugd")]
layout_mode = 2
button_group = SubResource("ButtonGroup_ycg2l")

[node name="BlockerDock" type="Panel" parent="."]
visible = false
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_r5508")

[node name="Foot" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -58.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_yv4dm")

[node name="AssetsManager" type="VBoxContainer" parent="Foot"]
layout_mode = 2
size_flags_vertical = 8
script = ExtResource("17_xgvx6")

[node name="ToggleContent" parent="Foot/AssetsManager" instance=ExtResource("6_cwr50")]
layout_mode = 2
size_flags_vertical = 8
property_name_pressed = "Hide Files ↓"
max_size = 350.0
property_name = "Show Files ↑"

[node name="ToggleButton" parent="Foot/AssetsManager/ToggleContent" index="0"]
size_flags_vertical = 8
text = "Show Files ↑"

[node name="FileInput9" parent="Foot/AssetsManager/ToggleContent/PanelContainer/ContentClip/Content" index="0" instance=ExtResource("18_n0bpv")]
layout_mode = 2
default_file_path = "res://landscaper/project.res"
default_file_on_dir_open = "project.res"
property_name = "Project File"

[node name="FileInput8" parent="Foot/AssetsManager/ToggleContent/PanelContainer/ContentClip/Content" index="1" instance=ExtResource("18_n0bpv")]
layout_mode = 2
default_file_path = "res://landscaper/terrain_mesh.res"
default_file_on_dir_open = "terrain_mesh.res"
property_name = "Terrain Mesh"

[node name="FileInput3" parent="Foot/AssetsManager/ToggleContent/PanelContainer/ContentClip/Content" index="2" instance=ExtResource("18_n0bpv")]
layout_mode = 2
default_file_path = "res://landscaper/terrain_material.res"
default_file_on_dir_open = "terrain_material.res"
property_name = "Terrain Material"

[node name="FileInput" parent="Foot/AssetsManager/ToggleContent/PanelContainer/ContentClip/Content" index="3" instance=ExtResource("18_n0bpv")]
layout_mode = 2
default_file_path = "res://landscaper/terrain_texture.png"
default_file_on_dir_open = "terrain_texture.png"
property_name = "Terrain Texture"

[node name="FileInput5" parent="Foot/AssetsManager/ToggleContent/PanelContainer/ContentClip/Content" index="4" instance=ExtResource("18_n0bpv")]
layout_mode = 2
default_file_path = "res://landscaper/grass_mesh.res"
default_file_on_dir_open = "grass_mesh.res"
property_name = "Grass Mesh"

[node name="FileInput6" parent="Foot/AssetsManager/ToggleContent/PanelContainer/ContentClip/Content" index="5" instance=ExtResource("18_n0bpv")]
layout_mode = 2
default_file_path = "res://landscaper/grass_material.res"
default_file_on_dir_open = "grass_material.res"
property_name = "Grass Material"

[node name="FileInput7" parent="Foot/AssetsManager/ToggleContent/PanelContainer/ContentClip/Content" index="6" instance=ExtResource("18_n0bpv")]
layout_mode = 2
default_file_path = "res://landscaper/grass_shader.gdshader"
default_file_on_dir_open = "grass_shader.gdshader"
property_name = "Grass Shader"

[node name="FileInput4" parent="Foot/AssetsManager/ToggleContent/PanelContainer/ContentClip/Content" index="7" instance=ExtResource("18_n0bpv")]
layout_mode = 2
default_file_path = "res://landscaper/grass_texture.png"
default_file_on_dir_open = "grass_texture.png"
property_name = "Grass Texture"

[node name="All" type="HBoxContainer" parent="Foot/AssetsManager"]
layout_mode = 2

[node name="Load" type="Button" parent="Foot/AssetsManager/All"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Loads the files under \"Show Files\" box. 
Loading a different file than the one it 
had on the project file will set it as the 
default from now on."
text = "Load Project"
icon = SubResource("AtlasTexture_0gaee")

[node name="Save" type="Button" parent="Foot/AssetsManager/All"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Saves the files under \"Show Files\" box. 
Saving a different file than the one it 
had on the project file will set it as the 
default from now on."
text = "Save Project *"
icon = SubResource("AtlasTexture_pbtfv")

[node name="AcceptDialog" type="AcceptDialog" parent="Foot/AssetsManager"]
initial_position = 2
size = Vector2i(607, 106)
content_scale_mode = 1
dialog_text = "Upgrade to Mobile or Forward+ renderer to add more than one grass variant
Delete extra grass variants to stop seeing this message"

[node name="ConfirmationSaveDialog" type="ConfirmationDialog" parent="Foot/AssetsManager"]
initial_position = 2
content_scale_mode = 1

[node name="ConfirmationLoadDialog" type="ConfirmationDialog" parent="Foot/AssetsManager"]
initial_position = 2
content_scale_mode = 1

[node name="BlockerFoot" type="Panel" parent="Foot"]
visible = false
modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_r5508")

[node name="Label" type="Label" parent="Foot/BlockerFoot"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 18
horizontal_alignment = 1
vertical_alignment = 1

[node name="BlockerFull" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_r5508")

[node name="Label" type="Label" parent="BlockerFull"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 31.0
offset_top = 49.0
offset_right = -31.0
offset_bottom = -49.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 16
text = "Create a Landscaper node in the scene tree or select one to continue!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[editable path="Dock/Tabs"]
[editable path="Dock/Body/ScrollContainer/MarginContainer/GrassSpawner/Variants"]
[editable path="Dock/Body/ScrollContainer/MarginContainer/GrassSpawner/Billboard"]
[editable path="Dock/Body/ScrollContainer/MarginContainer/Instancer/Instances"]
[editable path="Foot/AssetsManager/ToggleContent"]
